examples/test_package/steps/dpl__forst:precise.pl_run5/#test_results_result.txt
% Problog Inference Result：
stack_op(push(1),[2, 3, 4],[1, 2, 3, 4]) = 1.0000
stack_op(pop,[1, 2, 3, 4],[2, 3, 4]) = 1.0000
stack_op(dup,[1, 2, 3, 4],[1, 1, 2, 3, 4]) = 1.0000
stack_op(swap,[1, 2, 3, 4],[2, 1, 3, 4]) = 1.0000
stack_op(over,[1, 2, 3, 4],[2, 1, 2, 3, 4]) = 1.0000
stack_op(rot,[1, 2, 3, 4],[3, 1, 2, 4]) = 1.0000Error evaluating Problog model:
    rf = self.fold(
         ^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1101, in fold
    raise ParseError(
problog.parser.ParseError: Operator priority clash at 9:44.Error evaluating Problog model:
    rf = self.fold(
         ^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1101, in fold
    raise ParseError(
problog.parser.ParseError: Operator priority clash at 9:44.